# software_class

./: DEVELOPMENT_LOG.md  dota_utils.py
.github/: copilot-instructions.md
docs/: guide.md  install.md  开发日志.md  架构.md
fastapi-backend/: .gitignore  dota_utils.py  main.py  pyproject.toml  test_dota2coco_P2B_obb.py
fastapi-backend/uploads/: image_ship.json
fastapi-backend/uploads/COCO/: pseudo_obb_result.json
fastapi-backend/uploads/label/: image001.txt  image002.txt  image003.txt  image004.txt  image005.txt  image006.txt
react-frontend/: package-lock.json  package.json  vite.config.js
react-frontend/src/: App.css  App.jsx
react-frontend/src/components/: ImageAnnotation.css  ImageAnnotation.jsx  ImageDetection.css  ImageDetection.jsx
react-frontend/src/utils/: api.js
