[project]
name = "fastapi-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.118.0",
    "opencv-python-headless>=4.12.0.88",
    "pillow>=12.0.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.37.0",
    "pydantic>=2.7.0",
]
